fix spacing

--- a/mcm_website_theme/static/src/css/faq.css
+++ b/mcm_website_theme/static/src/css/faq.css
@@ -117,7 +117,7 @@ h1.title {
   -webkit-transition: all 0.35s ease;
   border: 1px solid lightgrey;
   margin-top: -1px;
-  padding: 10px 0px 10px 0px;
+  padding: 10px 43px 10px 9px;
   margin: 0;
   text-decoration: none;
   font-size: 19px; 
